Updated new hub version details.

--- a/docs/validate/dymension-hub/build-dymd.mdx
+++ b/docs/validate/dymension-hub/build-dymd.mdx
@@ -17,7 +17,7 @@ import TabItem from '@theme/TabItem';
 1. Use `git` to retrieve [Dymension Hub](https://github.com/dymensionxyz/dymension):
 
     ```
-    git clone https://github.com/dymensionxyz/dymension.git --branch v1.0.2-beta
+    git clone https://github.com/dymensionxyz/dymension.git --branch v2.0.0-alpha.7
     cd dymension
     ```
 
@@ -38,8 +38,8 @@ import TabItem from '@theme/TabItem';
     ```bash
     name: dymension
     server_name: dymd
-    version: v1.0.2-beta
-    commit: 74457e007dc802bd9c0be979baa5d83ab4d3226e
+    version: v2.0.0-alpha.3
+    commit: 7a74c08a5667fd783a2cece352066363c5bb347e
     ```
 
     If the dymd command is not found an error message is returned, confirm that your [GOPATH](https://go.dev/doc/gopath_code#GOPATH) is correctly configured by running the following command:
